grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    comment: ($) => token(choice(
      seq("//", /[^\n]*/),
      seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
    )),

    // Program-element (pelt)
    //
    // pelt → pragma
    //  	  →	incld
    //  	  →	mdefn
    //  	  →	idecl
    //  	  →	xdecl
    //  	  →	ldecl
    //  	  →	lconstructor
    //  	  →	cdefn
    //  	  →	wdecl
    //  	  →	ecdecl
    //  	  →	struct
    //  	  →	enumdef
    //  	  →	type_alias_declaration
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
        $.type_alias_declaration,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    mdefn: ($) =>
      seq(
        optional(field("export", $.export)),
        "module",
        field("name", $.module_name),
        optional(field("gparams", $.gparams)),
        "{",
        repeat(field("module_element", $._pelt)),
        "}",
      ),

    // Generic-parameter-list (gparams)
    //
    // gparams → < generic-param , … , generic-param >
    gparams: ($) => seq("<", commaSep1(field("gparam", $.generic_param)), ">"),

    // Generic-parameter (generic-param)
    //
    // generic-param → # tvar-name
    //               → tvar-name
    generic_param: ($) => choice(seq("#", $.tvar_name), $.tvar_name),

    // Import-declaration (idecl)
    //
    // idecl → import selection^opt import-name gargs^opt prefix^opt ;
    idecl: ($) =>
      seq(
        "import",
        optional(field("selection", $.import_selection)),
        field("id", $.import_name),
        optional(field("gargs", $.gargs)),
        optional(field("prefix", $.prefix)),
        ";"
      ),

    // Import-selection (import-selection)
    //
    // import-selection → { import-element , … , import-element } from
    import_selection: ($) => seq("{", commaSep1($.import_element), "}", "from"),

    // Import-element (import-element)
    //
    // import-element → id
    //                → id as id
    import_element: ($) => choice(
      field("id", $.id),
      seq(field("id", $.id), "as", field("alias", $.id))
    ),

    // Import-name (import-name)
    //
    // import-name → id
    //             → file
    import_name: ($) => choice($.id, $.file),

    // Generic-argument-list (gargs)
    //
    // gargs → < garg , … , garg >
    gargs: ($) => seq("<", commaSep1(field("garg", $.garg)), ">"),

    // Import-prefix (prefix)
    //
    // prefix → prefix id
    export: ($) => "export",

    // Sealed-modifier (sealed)
    //
    // sealed → sealed
    ldecl: ($) =>
      seq(
        optional(field("export", $.export)),
        optional(field("sealed", $.sealed)),
        "ledger",
        field("name", $.id),
        ":",
        field("type", $.type),
        ";",
      ),

    // Constructor (lconstructor)
    //
    // lconstructor → constructor ( parg , … , parg ) block ;opt
    cdefn: ($) =>
      seq(
        optional(field("export", $.export)),
        optional(field("pure", $.pure)),
        "circuit",
        field("id", $.function_name),
        optional(field("gparams", $.gparams)),
        "(",
        commaSep(field("parg", $.parg)),
        ")",
        ":",
        field("type", $.type),
        field("body", $.block),
      ),

    // Witness-declaration (wdecl)
    //
    // wdecl → export^opt witness id gparams^opt ( arg , … , arg ) : type ;
    struct: ($) =>
      seq(
        optional(field("export", $.export)),
        "struct",
        field("name", $.struct_name),
        optional(field("gparams", $.gparams)),
        choice($._struct_body_semicolon, $._struct_body_comma),
        optional(";"),
      ),

    // { arg ; … ; arg ;^opt }
    _struct_body_semicolon: ($) =>
      seq("{", repeat(seq(field("arg", $.arg), ";")), optional(";"), "}"),

    // { arg , … , arg ,^opt }
    _struct_body_comma: ($) =>
      prec(1, seq("{", repeat(seq(field("arg", $.arg), ",")), optional(","), "}")),

    // Enum-definition (enumdef)
    //
    // enumdef → export^opt enum enum-name { id , …¹ , id ,^opt } ;^opt
    type_alias_declaration: ($) => seq(
      optional(field("export", $.export)),
      optional(field("nominal", "new")),
      "type",
      field("name", $.type_name),
      optional(field("gparams", $.gparams)),
      "=",
      field("type", $.type),
      ";",
    ),

    // Type-name (type-name)
    type_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,

    // Argument (arg)
    //
    // arg → id : type
    arg: ($) => seq(field("id", $.id), ":", field("type", $.type)),

    // Pattern-argument (parg)
    //
    // parg → pattern : type
    parg: ($) => seq(field("pattern", $.pattern), ":", field("type", $.type)),

    // Type (type)
    //
    // type →	tref
    //      →	Boolean
    //      →	Field
    //      →	Uint < tsize >
    //      →	Uint < tsize .. tsize >
    //      →	Bytes < tsize >
    //      →	Opaque < str >
    //      →	Vector < tsize , type >
    //      →	[ type , … , type ]
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        $.uint_type,
        $.bytes_type,
        $.opaque_type,
        $.vector_type,
        seq("[", commaSep($.type), "]"),
      ),

    uint_type: ($) => seq("Uint", "<", field("tsize", $.tsize), optional(seq("..", field("tsize", $.tsize))), ">"),
    opaque_type: ($) => seq("Opaque", "<", $.str, ">"),
    vector_type: ($) => seq("Vector", "<", field("tsize", $.tsize), ",", field("type", $.type), ">"),

    // Type-reference (tref)
    //
    // tref → id gargs^opt
    tref: ($) => prec.left(seq(field("id", $.id), optional(field("gargs", $.gargs)))),

    // Type-size (tsize)
    //
    // tsize → nat
    //       → id
    tsize: ($) => choice($.nat, $.id),

    // Generic-argument (garg)
    //
    // garg → nat
    //      → type
    garg: ($) => choice($.nat, $.type),

    // Block (block)
    //
    // block → { stmt … stmt }
    block: ($) => seq("{", repeat(field("stmt", $.stmt)), "}"),

    // Statement (stmt)
    //
    // stmt → expr-seq ;
    //      → return expr-seq ;
    //      → return ;
    //      → if ( expr-seq ) stmt else stmt
    //      → if ( expr-seq ) stmt
    //      → for ( const id of tsize .. tsize ) stmt
    //      → for ( const id of expr-seq ) stmt
    //      → const cbinding , … , cbinding ;
    //      → block
    stmt: ($) =>
      prec.right(
        choice(
          $.expression_sequence_stmt,
          $.return_stmt,
          $.if_stmt,
          $.for_stmt,
          $.const_stmt,
          $.block,
        ),
      ),

    return_stmt: ($) => seq("return", optional(field("value", $.expr_seq)), ";"),
    for_stmt: ($) => seq("for", "(", "const", field("counter", $.id), "of",
      choice(
        seq(field("range_start", $.tsize), "..", field("range_end", $.tsize)),
        field("limit", $.expr_seq),
      ),
      ")", field("body", $.stmt)),
    expression_sequence_stmt: ($) => seq($.expr_seq, ";"),
    const_stmt: ($) => seq("const", commaSep1($.cbinding), ";"),
    cbinding: ($) => seq(
      field("pattern", $.pattern),
      optional(seq(":", field("type", $.type))),
      "=",
      field("value", $.expr)
    ),

    // Pattern (pattern)
    //
    // pattern → id
    //        → [ pattern-tuple-elt , … , pattern-tuple-elt ]
    //        → { pattern-struct-elt , … , pattern-struct-elt }
    pattern: ($) =>
      choice(
        field("id", $.id),
        field("pattern_tuple", seq("[", optional(commaSep(field("pattern_tuple_elt", $.pattern_tuple_elt))), "]")),
        field("pattern_struct", seq("{", commaSep1(field("pattern_struct_elt", $.pattern_struct_elt)), "}")),
      ),

    // Pattern-tuple-element (pattern-tuple-elt)
    //
    // pattern-tuple-elt → (empty)
    //                   → pattern
    expr_seq: ($) =>
      choice(field("expr", $.expr), seq(field("expr", $.expr), repeat1(seq(",", field("expr", $.expr))), ",", field("expr", $.expr))),

    // Expression (expr)
    //
    // expr → expr0 ? expr : expr
    //      → assign_expr
    //      → expr0
    assign_expr: ($) => prec.right(seq(
      field("target", $._expr0),
      field("operator", choice("=", "-=", "+=")),
      field("value", $.expr)
    )),

    expr: ($) => choice($.conditional_expr, $.assign_expr, $._expr0),

    // Expression0 (expr0)
    //
    // expr0 → expr0 || expr1
    //       → expr1
    _expr0: ($) => prec.left(choice($.or_expr, $._expr1)),

    // Expression1 (expr1)
    //
    // expr1 → expr1 && expr2
    //       → expr2
    rel_comparison_expr: ($) => seq(field("left", $._expr3), field("operator", choice($.less_than, $.less_than_or_equal, $.greater_than_or_equal, $.greater_than)), field("right", $._expr4)),
    _expr3: ($) =>
      prec.left(
        choice(
          $.rel_comparison_expr,
          $._expr4,
        ),
      ),

    // Expression4 (expr4)
    //
    // expr4 → expr4 as type
    //       → expr5
    _expr4: ($) => prec.left(4, choice($.cast_expr, $._expr5)),

    // Expression5 (expr5)
    //
    // expr5 → expr5 + expr6
    //       → expr5 - expr6
    //       → expr6
    bin_sum_expr: ($) => seq(field("left", $._expr5), field("operator", choice("+", "-")), field("right", $._expr6)),
    _expr5: ($) =>
      prec.left(
        choice(
          $.bin_sum_expr,
          $._expr6,
        ),
      ),

    // Expression6 (expr6)
    //
    // expr6 → expr6 * expr7
    //       → expr7
    _expr6: ($) => choice($.bin_mul_expr, $._expr7),

    // Expression7 (expr7)
    //
    // expr7 → ! expr7
    //       → expr8
    member_access_expr: ($) => prec.left(seq(field("base", $._expr8), ".", field("member", $.id), optional(field("arguments", seq("(", commaSep(field("expr", $.expr)), ")"))))),
    _expr8: ($) =>
      prec.left(
        choice(
          $.index_access_expr,
          $.member_access_expr,
          $.term,
        ),
      ),

    // Term (term)
    //
    // term → lit
    //      → default < type >
    //      → map ( fun , expr , …¹ , expr )
    //      → fold ( fun , expr , expr , …¹ , expr )
    //      → fun ( expr , … , expr )
    //      → disclose ( expr )
    //      → tref { struct-arg , … , struct-arg }
    //      → array_literal
    //      → bytes_literal
    //      → slice_term
    //      → assert_term
    //      → id
    //      → ( expr-seq )
    term: ($) =>
      choice(
        $.lit, // Literal (true, false, nat, str, pad)
        $.default_term, // Default value with type
        $.map_term, // Map function with one or more expressions
        $.fold_term, // Fold with initial value and list
        $.function_call_term, // Function call with zero or more expressions
        $.disclose_term, // Disclose with single expression
        $.struct_term, // Struct literal with type reference
        $.array_literal, // Array literal with optional spread elements
        $.bytes_literal, // Bytes literal
        $.slice_term, // Slice expression
        $.assert_term, // Assert expression
        $.id, // Identifier
        $.expr_seq_term, // Parenthesized expression sequence
      ),

    map_term: ($) => seq("map", "(", field("fun", $.fun), ",", commaSep1(field("expr", $.expr)), ")"),
    fold_term: ($) => seq("fold", "(", field("fun", $.fun), ",", field("init_value", $.expr), ",", commaSep1(field("expr", $.expr)), ")"),
    function_call_term: ($) => seq(field("fun", $.fun), "(", commaSep(field("expr", $.expr)), ")"),
    array_literal: ($) => seq("[", commaSep(choice(field("expr", $.expr), $.spread_element)), "]"),

    // Bytes-literal (bytes_literal)
    //
    // bytes_literal → Bytes [ expr/spread , … , expr/spread ,^opt ]
    bytes_literal: ($) => seq("Bytes", "[", commaSep(choice(field("expr", $.expr), $.spread_element)), "]"),

    // Spread-element (spread_element)
    //
    // spread_element → ... expr
    spread_element: ($) => seq("...", field("expr", $.expr)),

    // Slice-term (slice_term)
    //
    // slice_term → slice < tsize > ( expr , expr )
    slice_term: ($) => seq("slice", "<", field("size", $.tsize), ">", "(", field("value", $.expr), ",", field("index", $.expr), ")"),

    // Assert-term (assert_term)
    //
    // assert_term → assert ( expr , str )
    assert_term: ($) => seq("assert", "(", field("condition", $.expr), ",", field("message", $.str), ")"),

    // Literal (lit)
    //
    // lit → true
    //     → false
    //     → nat
    //     → str
    //     → pad ( nat , str )
    lit: ($) =>
      choice(
        "true",
        "false",
        $.nat,
        $.str,
        $.pad,
      ),

    fun: ($) =>
      choice(
        seq(field("id", $.id), optional(field("gargs", $.gargs))),
        seq(
          "(",
          commaSep($._pattern_or_parg),
          ")",
          optional(field("return", $._return_type_decl)),
          "=>",
          choice(field("block", $.block), field("expr", $.expr)),
        ),
        seq("(", $.fun, ")"),
      ),

    // Return-type-declaration (return-type-decl)
    //
    // return-type-decl → : type
    _return_type_decl: ($) => seq(":", $.type),

    // Pattern-or-pattern-argument (pattern-or-parg)
    //
    // pattern-or-parg → pattern
    //                 → parg
    _pattern_or_parg: ($) => choice(field("pattern", $.pattern), field("parg", $.parg)),

    // OPS
    greater_than: ($) => ">",
    id: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    module_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    function_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    struct_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    tvar_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,

    // field-literal (nat)
    //
    // a field literal is 0 or a natural number formed from a sequence
    // of digits starting with 1-9, hex (0x), octal (0o), or binary (0b)
    nat: ($) => choice("0", /[1-9][0-9]*/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/),

    // string-literal (str, file)
    //
    // supports both double-quoted and single-quoted strings
    str: ($) => token(choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/)),
    file: ($) => token(choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/)),

    // version-literal (version)
    //
    // a version literal takes the form nat or nat.nat or nat.nat.nat,
    // e.g., 1.2 or 1.2.3, representing major, minor, and bugfix versions
